--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "live-nextjs-starter",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,20 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@deepgram/sdk": "^3.0.0-beta.2",
+    "@deepgram/sdk": "^3.10.1",
     "@gradio/client": "^1.11.0",
-    "@langchain/groq": "^0.0.1",
     "@svgr/webpack": "^8.1.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "axios": "^1.6.7",
-    "fs": "0.0.1-security",
-    "groq-sdk": "^0.3.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-siriwave": "^3.1.0",
-    "swr": "^2.2.4"
+    "react-siriwave": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
