--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wavesurfer/react": "^1.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "easy-speech": "^2.4.0",
     "lucide-react": "^0.475.0",
     "meyda": "^5.6.3",
     "react": "^19.0.0",
